@@ -1433,4 +1433,16 @@ attribute_def svr_attr_def[] =
     ATR_TYPE_LONG,
     PARENT_TYPE_SERVER},
 
+  /* SRV_ATR_DisableAutoRequeue */
+  {(char *)ATTR_disable_automatic_requeue, /* "disable_automatic_requeue" */
+   decode_b,
+   encode_b,
+    set_b,
+    comp_b,
+    free_null,
+    NULL_FUNC,
+    MGR_ONLY_SET,
+    ATR_TYPE_LONG,
+    PARENT_TYPE_SERVER},
+
   };
